# perpcity-python-sdk

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: close.py  create_perp.py  maker.py  setup.py  taker.py  view.py
src/perpcity_sdk/: __init__.py  context.py  types.py
src/perpcity_sdk/abis/: __init__.py  beacon.json  erc20.json  fees.json  margin_ratios.json  perp_manager.json
src/perpcity_sdk/functions/: __init__.py  open_position.py  perp.py  perp_manager.py  position.py  user.py
src/perpcity_sdk/utils/: __init__.py  approve.py  constants.py  conversions.py  errors.py  liquidity.py  rpc.py
tests/unit/: test_conversions.py  test_errors.py  test_functions.py  test_liquidity.py  test_position_calculations.py
